--- a/packages/uifork/package.json
+++ b/packages/uifork/package.json
@@ -1,6 +1,6 @@
 {
   "name": "uifork",
-  "version": "0.0.5",
+  "version": "0.0.7-beta.0",
   "description": "CLI tool and React components for managing UI component versions and switching between them",
   "keywords": [
     "ab-testing",
@@ -62,6 +62,7 @@
     "@vitejs/plugin-react": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "rollup-preserve-directives": "^1.1.3",
     "typescript": "^5.3.0",
     "vite": "^7.3.1",
     "vite-plugin-dts": "^4.5.4"
