--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -26,7 +26,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
-    "uifork": "file:../../uifork/packages/uifork"
+    "uifork": "*"
   },
   "devDependencies": {
     "@types/node": "^25.1.0",
