--- a/apps/sandbox/package.json
+++ b/apps/sandbox/package.json
@@ -24,6 +24,7 @@
     "motion": "^12.29.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.13.0",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
