--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "geist": "^1.7.0",
     "lucide-react": "^0.563.0",
     "motion": "^12.29.2",
     "react": "^18.2.0",
