Scope npm package to @cznuk/branchkit

--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
     "dev": "turbo run dev",
     "dev:all": "turbo run dev",
     "sandbox": "turbo run dev --filter=sandbox",
-    "sandbox:full": "turbo run dev --filter=branchkit --filter=sandbox",
+    "sandbox:full": "turbo run dev --filter=@cznuk/branchkit --filter=sandbox",
     "sandbox:watch": "cd apps/sandbox && npm run watch",
     "marketing": "turbo run dev --filter=marketing",
-    "marketing:full": "turbo run dev --filter=branchkit --filter=marketing",
+    "marketing:full": "turbo run dev --filter=@cznuk/branchkit --filter=marketing",
     "marketing:watch": "cd apps/marketing && npm run watch",
-    "dev:branchkit": "turbo run dev --filter=branchkit",
+    "dev:branchkit": "turbo run dev --filter=@cznuk/branchkit",
     "test": "turbo run test",
     "lint": "oxlint",
     "lint:fix": "oxlint --fix",
