--- a/apps/marketing/package.json
+++ b/apps/marketing/package.json
@@ -29,7 +29,7 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
     "tw-animate-css": "^1.4.0",
-    "branchkit": "*"
+    "@cznuk/branchkit": "*"
   },
   "devDependencies": {
     "@types/node": "^25.1.0",
